app/assets/stylesheets/custom.scss
body {
	font-size: 1.25rem;
}
p {
	line-height: 1.75em;
}
li {
	margin-bottom: 1.5rem;
}
.form-floating.required label:after {
	content: '*';
	color: red;
}
.fieldset.required legend:after {
	content: '*';
	color: 'red';
}

.image-upload > input {
	display: none
}
.image-upload > label {
	cursor: pointer
}

.background-dark {
	background: black;
}
.font-white {
	color: white;
}

.slider {
	-webkit-appearance: none;
	appearance: none;
	background: transparent;
	cursor: pointer;
	display: block;
	width: 100%
}

.slider::-webkit-slider-runnable-track {
	background: #000000;
	height: 0.5rem
}

.slider::-moz-range-track {
  background: #000000;
  height: 0.5rem;
}

.slider::-webkit-slider-thumb {
   -webkit-appearance: none; 
   appearance: none;
   margin-top: -12px;
   background: #6f6f6f;
   border-radius: 50%;
   height: 2rem;
   width: 2rem;    
}

.slider::-moz-range-thumb {
    border: none; 
    border-radius: 50%;
    background-color: #6f6f6f;
    height: 2rem;
    width: 2rem;
}

.slider:focus {
  outline: none;
}

.slider:focus::-webkit-slider-thumb {
  border: 1px solid #053a5f;
  outline: 3px solid #053a5f;
  outline-offset: 0.125rem;
}

.slider:focus::-moz-range-thumb {
  border: 1px solid #053a5f;
  outline: 3px solid #053a5f;
  outline-offset: 0.125rem;     
}

.slider:active::-webkit-slider-thumb {
  border: 1px solid #053a5f;
  outline: 3px solid #053a5f;
  outline-offset: 0.125rem;
}

.slider:active::-moz-range-thumb {
  border: 1px solid #053a5f;
  outline: 3px solid #053a5f;
  outline-offset: 0.125rem;     
}

.ticks {
	display: flex;
	justify-content: space-between;
	padding: 0.125rem 0.90rem;
}

.tick {
	position: relative;
  display: flex;
  justify-content: center;
  width: 2px;
  background: #000000;
  height: 0.25rem;  
}

.modal-backdrop {
	--bs-backdrop-opacity: 1
}

.bg-ily {
	background: #606060	
}
.brand-ily {
	color: #FFD700
}

@media (inverted-colors: inverted) {
	.bg-ily {
		background: #9F9F9F		
	}
	.brand-ily {
		color: #0028FF
	}
	.background-dark {
		background: white;
	}
	.font-white {
		color: black
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		--bs-dark-rgb: 250, 250, 250;
		--bs-light-rgb: 32, 32, 41;
	}

	body {
		background: black;
		color: white;
	}

	.card {
		background: black;
		color: white;
	}
	.btn-dark {
		--bs-btn-bg: gray;
		--bs-btn-color: black;
		--bs-btn-hover-bg: gray;
		--bs-btn-hover-color: black;
	}
	.btn-outline-dark {
		--bs-btn-bg: black;
		--bs-btn-color: #fff;
		--bs-btn-hover-bg: black;
		--bs-btn-hover-color: #fff;
		--bs-btn-border-color: #fff;
		--bs-btn-hover-border-color: #fff;
		--bs-btn-active-bg: gray;
		--bs-btn-active-color: black;
		--bs-btn-active-border-color: #fff;
	}
	.form-control {
		background-color: #212529;
		color: #fff;
	}
	.form-control:focus {
		background: #212529;
		color: #fff;
	}
	.progress {
		--bs-progress-bg: black
	}		
}

